@@ -170,6 +170,7 @@ class game_lua_kernel : public lua_kernel_base
 	int intf_get_sound_source(lua_State *L);
 	int intf_log(lua_State *L);
 	int intf_toggle_fog(lua_State *L, const bool clear);
+	int intf_get_fog_or_shroud(lua_State *L, bool fog);
 
 	//private helpers
 	std::string synced_state();
